--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/nodebotsau/internetoftents#readme",
   "dependencies": {
     "johnny-five": "^0.10.6",
+    "keypress": "^0.2.1",
     "mosca": "^2.2.0",
     "mqtt": "^2.1.3",
     "node-red": "^0.15.2",
